--- a/src/projectEntry.css
+++ b/src/projectEntry.css
@@ -5,10 +5,11 @@
     justify-content: space-between;
     align-items: flex-start;
     padding: 20px;
-    margin-left: 400px;
-    margin-right: 300px;
+    margin-left: 100px;
+    margin-right: 100px;
     align-items: center;
-}
+    overflow: hidden;
+  }
 
 .sub-header-container {
     display: flex;
@@ -63,14 +64,15 @@
 }
 
 .reference-image-container {
-
-}
-.reference-image {
+    flex-shrink: 0;
+    margin-left: 20px;
+  }
+  .reference-image {
     max-width: 1000px;
-    height: auto;
+    max-height: 100%;
     border-radius: 10px;
-    margin-top: 20px
-}
+    margin-top: 20px;
+  }
 
 .project-info {
     flex: 1;
